# mg-1.3.64x.1

./: .Makefile.swo  ChangeLog  MAKE-MG-DIST.bin-files  MAKE-MG-DIST.man-files  MAKE-MG-DIST.sh  Makefile  Makefile.in  README.64-bit  README.Mac-OS-X  README.NeXT  README.Sun  README.md  README.mg-1.3x  WIN32cfg.h  aclocal.m4  build_options.in  config.h  config.h.in  config.status  configure  configure.in  hist.txt  long-to-mg_long.sh  mg_types.h  sysfuncs.h
RCS/: ChangeLog,v  MAKE-MG-DIST.sh,v  Makefile.in,v  WIN32cfg.h,v  acconfig.h,v  configure.in,v  long-to-mg_long.sh,v  sysfuncs.h,v
SampleData/: Makefile
SampleData/bible/: Makefile
autom4te.cache/: output.0  requests  traces.0
lib/: Makefile  Makefile.in  WIN32.MAK  alloca.c  bitio_gen.c  bitio_gen.h  bitio_m.h  bitio_m_mem.h  bitio_m_mems.h  bitio_m_random.h  bitio_m_stdio.h  bitio_mem.c  bitio_mem.h  bitio_mems.c  bitio_mems.h  bitio_random.c  bitio_random.h  bitio_stdio.c  bitio_stdio.h  error.c  filestats.c  filestats.h  ftruncate.c  getopt.c  getopt.h  getpagesize.h  heap.c  heap.h  huffman.c  huffman.h  huffman_mem.c  huffman_mem.h  huffman_stdio.c  huffman_stdio.h  local_strings.c  local_strings.h  memlib.c  memlib.h  messages.c  messages.h  (+14 more)
lib/RCS/: Makefile.in,v  alloca.c,v  bitio_gen.c,v  bitio_gen.h,v  bitio_m.h,v  bitio_m_mem.h,v  bitio_m_mems.h,v  bitio_m_random.h,v  bitio_m_stdio.h,v  bitio_mem.c,v  bitio_mem.h,v  bitio_mems.c,v  bitio_mems.h,v  bitio_random.c,v  bitio_random.h,v  bitio_stdio.c,v  bitio_stdio.h,v  error.c,v  filestats.c,v  filestats.h,v  ftruncate.c,v  getopt.c,v  getopt.h,v  getopt1.c,v  getpagesize.h,v  gmalloc.c,v  heap.c,v  heap.h,v  huffman.c,v  huffman.h,v  huffman_mem.c,v  huffman_mem.h,v  huffman_stdio.c,v  huffman_stdio.h,v  local_strings.c,v  local_strings.h,v  memlib.c,v  memlib.h,v  messages.c,v  messages.h,v  (+19 more)
man/man1/: mg_decompress_text.1
src/images/: Makefile  Makefile.in  WIN32.MAK  arithcode.c  arithcode.h  basictypes.h  bilevel.c  bilevel.h  codeoffsets.c  codeoffsets.h  codesyms.c  codesyms.h  extractor.c  extractor.h  felics.c  lstevent.c  marklist.c  marklist.h  match.c  match.h  mgbilevel.c  mgfelics  mgfelics.c  mgtic  mgtic.c  mgticbuild.c  mgticdump  mgticdump.c  mgticprune.c  mgticstat.c  model.h  pbmtools.c  pbmtools.h  ppm.c  sortmarks.c  sortmarks.h  utils.c  utils.h
src/scripts/: Makefile  Makefile.in  mgbuild_4.sh
src/text/: .gdb_history  MGPASS.C  Makefile  Makefile.in  WIN32.MAK  backend.c  backend.h  bool_optimiser.c  bool_optimiser.h  bool_parser.c  bool_parser.h  bool_parser.y  bool_query.c  bool_query.h  bool_tester.c  bool_tree.c  bool_tree.h  build.h  builder.cpp  commands.c  commands.h  comp_dict.c  comp_dict.h  conditions.h  environment.c  environment.h  globals.h  hash.h  invf.h  invf_get.c  invf_get.h  ivf.pass1.c  ivf.pass2.c  lists.c  lists.h  locallib.c  locallib.h  mg.h  mg.special.c  mg_compression_dict  (+55 more)
test/: Makefile  Makefile.in  alice.len.cmp  alice.sum.cmp  hist.txt  r1  r1.cmp  r2  r2.cmp  r3  r3.cmp  simple_sum  simple_sum.c
test/RCS/: Makefile.in,v  simple_sum.c,v
(+127 files in other folders)
